# generator-csc160-programming-assignment

./: .travis.yml  .yo-rc.json  LICENSE  README.md  package-lock.json  package.json
__tests__/: app.js
generators/app/: index.js
generators/app/templates/: .env  .gitignore  CMakeLists.txt
generators/app/templates/doc/user_docs/: Makefile  main.tex
generators/app/templates/include/: ProgrammingAssignmentConfig.hh.in  general_functions.hh
generators/app/templates/src/: general_functions.cc  main.cc
